# network-master

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  SETUP.md  docker-compose.yml  nm
crates/nm-agent/: Cargo.toml
crates/nm-agent/src/: config.rs  connection.rs  installer.rs  main.rs  resolver.rs  scheduler.rs  service.rs  system_info.rs  trace_manager.rs  traffic_monitor.rs  updater.rs
crates/nm-agent/src/probe/: engine.rs  icmp.rs  icmp_win.rs  mod.rs  tcp.rs  udp.rs
crates/nm-cli/: Cargo.toml
crates/nm-cli/src/: main.rs
crates/nm-common/: Cargo.toml
crates/nm-common/src/: config.rs  crypto.rs  lib.rs  models.rs  protocol.rs  quality.rs
crates/nm-server/: Cargo.toml
crates/nm-server/src/: auth.rs  config.rs  main.rs  state.rs
crates/nm-server/src/api/: agents.rs  alerts.rs  auth_routes.rs  dashboard.rs  download.rs  exports.rs  mod.rs  shares.rs  targets.rs  trace_profiles.rs  traces.rs  traffic.rs  update.rs
crates/nm-server/src/db/: agents.rs  alerts.rs  exports.rs  hops.rs  mod.rs  samples.rs  sessions.rs  share_tokens.rs  targets.rs  trace_profiles.rs  traffic.rs  users.rs
crates/nm-server/src/engine/: alert_evaluator.rs  ingestion.rs  mod.rs  route_detector.rs  stats_aggregator.rs  traffic.rs  update_watcher.rs
crates/nm-server/src/ws/: agent_handler.rs  connection_mgr.rs  frontend_handler.rs  mod.rs
docs/plans/: 2026-02-20-aws-deployment-design.md  2026-02-20-aws-deployment.md  2026-02-25-full-pingplotter-pro-clone.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/api/mutations/: useAgentMutations.ts  useTargetMutations.ts
frontend/src/api/queries/: useAgents.ts  useAlerts.ts  useProfiles.ts  useShares.ts  useTargets.ts  useUpdate.ts
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/features/alerts/: AlertsPage.tsx
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/features/reports/: ReportsPage.tsx
frontend/src/features/settings/: AgentManagementTab.tsx  ProfilesTab.tsx  SettingsPage.tsx  UpdateUploadDialog.tsx
frontend/src/features/share/: SharedTracePage.tsx
frontend/src/features/trace/: HopDetailPanel.tsx  HopTable.tsx  JitterChart.tsx  LatencyTimelineChart.tsx  LossChart.tsx  ShareDialog.tsx  StripChart.tsx  TracePage.tsx
frontend/src/features/traffic/: ProcessTable.tsx  TrafficPage.tsx
frontend/src/stores/: agentStore.ts  traceStore.ts  trafficStore.ts  uiStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/ws/: WebSocketProvider.tsx  messageHandlers.ts  types.ts
infra/: .gitignore  alb.tf  configure.sh  deploy.sh  ec2.tf  main.tf  outputs.tf  security_groups.tf  setup.sh  terraform.tfvars.example  variables.tf  vpc.tf
infra/backend/: Dockerfile  docker-compose.yml
infra/frontend/: Dockerfile  docker-compose.yml  nginx.conf
infra/scripts/: backend-userdata.sh  frontend-userdata.sh
migrations/: 001_initial_schema.sql  002_profiles_and_shares.sql  003_process_traffic.sql  004_users_rbac.sql  005_workspaces_sessions_configs.sql  006_advanced_alerts.sql  007_mos_focus_time.sql
