[package]
name = "nm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
nm-common = { path = "../nm-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rmp-serde = { workspace = true }

axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
jsonwebtoken = "9"
bcrypt = "0.17"
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dashmap = "6"
config = "0.14"
dotenvy = "0.15"
futures-util = "0.3"
